# dolt-jlcpcb-lcsc-inventory-job

./: .gitignore  README.md  pyproject.toml
migrations/: 2025-02-07_00_create_schema.sql  2025-02-08_00_add_foreign_keys.sql  2025-02-08_01_change_json_datatype.sql  2025-02-08_02_change_datetime_cols.sql
src/: _dolt_lib.py  load_lcsc_inventory.py
